--- a/style.css
+++ b/style.css
@@ -9,18 +9,29 @@ html,body {
 }
 body {
     background-color: #ffffff;
-    overflow-x: hidden;
     font-family: sans-serif;
-
+    overflow-x: hidden;
+}
+.page1complete {
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+    overflow-x: hidden;
 }
 main {
-    height: 98%;
-    width: 98%;
- background-color: #f3f3f3;
+    height: 97%;
+    width: 97%;
+    position: absolute;
+    top: 50%;
+    left: 49.5%;
+    transform: translate(-50%,-50%);
+    background-color: #f3f3f3;
  border-radius: 40px;
- margin: 13px 15px;
- overflow: hidden;
+ /* margin: 100px px; */
+
+ /* margin: 10px ; */
 }
+
 nav {
     width: 100%;
     height: 13%;
@@ -70,17 +81,17 @@ nav img {
     /* background-color: aqua; */
     display: flex;
     justify-content: space-between;
-    height: 87%;
+    /* height: 80%; */
 
 }
 .page1 .left {
     margin-top: 19%;
-    margin-left: 25px;
-  
+    margin-left: 2%;
 }
 .left p{
    /* color: red; */
    font-size: large;
+   line-height: 150%;
 
 }
 .page1 .left h1 {
@@ -96,4 +107,50 @@ nav img {
     height: 90%;
     margin-bottom: 50px;
     /* margin top: 1px; */
+}
+.page2 {
+    height: 100vh;
+    width: 100vw;
+    /* background-color: blue; */
+    position: relative;
+}
+.page2 > p {
+    /* background-color: aquamarine; */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-size: 90px;
+    width: 60%;
+    text-align: center;
+    line-height: 100%;
+    position: relative;
+}
+.page2 span {
+    
+    /* position: absolute; */
+}
+.page2 img{
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+    justify-content: ;
+    align-items: center;
+    
+}
+/* .page2 .profile1{ */
+/* position: initial; */
+/* z-index: 1; */
+/*  */
+/* } */
+/* .page2 > .profile2 { */
+    /* position: initial; */
+    /* z-index: 10; */
+    /* transform: translate(20%); */
+/*     */
+.page3 {
+    height: 100vh;
+    width: 100vw;
+    background-color: blue;
+    /* position: relative; */
 }
