--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ body {
     height: 100vh;
     width: 100vw;
     position: relative;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
+    /* padding: 10%; */
 }
 main {
     height: 97%;
@@ -30,6 +31,7 @@ main {
  /* margin: 100px px; */
 
  /* margin: 10px ; */
+ /* padding: 5; */
 }
 
 nav {
@@ -114,28 +116,39 @@ nav img {
     /* background-color: blue; */
     position: relative;
 }
-.page2 > p {
+.page2 p {
     /* background-color: aquamarine; */
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    font-size: 90px;
+    font-size: 95px;
+    font-weight: 549.5;
     width: 60%;
     text-align: center;
-    line-height: 100%;
+    line-height: 90%;
     position: relative;
 }
-.page2 span {
-    
+/* .page2 > p > span {
+    background-color: aqua;
+    transform: translate(30%); */
+/* position: relative; */
+/* transform: translateX(-10%); */
+    /* margin: 3px; */
+    /* padding: 5px; */
     /* position: absolute; */
-}
+/* } */
 .page2 img{
-    height: 80px;
-    width: 80px;
+    height: 95px;
+    width: 95px;
     border-radius: 50%;
-    justify-content: ;
-    align-items: center;
+    border: 2.5px solid #ffffff;
+
+  transform: translateY(18%);
+  
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* position: relative; */
     
 }
 /* .page2 .profile1{ */
@@ -143,14 +156,128 @@ nav img {
 /* z-index: 1; */
 /*  */
 /* } */
-/* .page2 > .profile2 { */
+.page2 .profile1 {
+    z-index: 20;
+    position: relative;
+}
+.page2 .profile2 {
+    position: relative;
     /* position: initial; */
     /* z-index: 10; */
-    /* transform: translate(20%); */
-/*     */
+    transform: translate(-20%,18%);
+    z-index: 10;
+  /* transform: translateY(20%); */
+
+}   
+.page2 .profile3 {
+    transform: translate(-40%,18%);
+    
+}
 .page3 {
     height: 100vh;
     width: 100vw;
-    background-color: blue;
+    /* background-color: blue; */
     /* position: relative; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 13px;
+}
+.page3 .left3 {
+    height: 90%;
+    width: 30%;
+    /* background-color: beige; */
+    /* margin: 25px; */
+    /* padding:; */
+    border-radius: 8%;
+    background-image: url(https://images.unsplash.com/photo-1689421754952-ee0d0628ca1f?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    /* object-fit: contain; */
+    background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+display: flex;
+align-items: flex-end;
+justify-content: space-between;
+padding: 20px;
+border: none;
+/* justify-content: baseline; */
+
+/* image-orientation: flip ; */
+
+    /* display: flex; */
+    /* justify-content: flex-end; */
+    /* align-items: center; */
+}
+.page3 .left3 .ri-arrow-drop-right-line {
+    padding: 17px 21px;
+    border-radius: 50%;
+   /* position: relative; */
+   /* z-index: 1000; */
+   background-color: white;
+border: none;
+
+
+}
+.page3 .left3 button {
+    padding: 17px 29px;
+    border-radius: 50px;
+    font-size: 19px;
+border: none;
+
+}
+.page3 .right3 {
+    height: 100%;
+    width: 65%;
+    /* background-color: aqua; */
+    /* margin: 3px; */
+    /* display: flex; */
+    /* justify-content: space-between; */
+    /* gap: 25px; */
+    padding: 30px;
+    /* margin-bottom: 20px; */
+    
+}
+.right3 .line1{
+    height: 10%;
+    width: 100%;
+    display: flex;
+    /* background-color: beige; */
+    padding: 20px;
+    gap: 30px;
+justify-content: center;
+align-items: center;
+font-size: 13px;   
+/* font-weight: 1px;  */
+}
+.right3 .line1 .icon01 {
+    background-color: #fff;
+    /* block-size: 100px; */
+padding: 8px;
+/* text-align: center; */
+/* align-items: center;  */
+border-radius: 50%;  
+border: 1px solid #ebebeb;
+/* size: 10%  */
+
+}
+.right3 .line1 .content{
+    width: 100%;
+    /* height: 40%; */
+    /* background-color: #ac2020; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+.line1 .content h1 {
+    font-size: 30px;
+    font-weight: 100;
+}
+.line1 .content p {
+    font-size: 20px;
+}
+hr {
+    margin: auto;
+    margin-top: 20px;
+    /* justify-content: c; */
 }
